[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.15.2"
thiserror = "*"
spl-token = {version = "*", features = ["no-entrypoint"]}
arrayref = "*"
borsh = "*"
serde="*"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "*"
solana-logger = "*"
solana-program-test = "*"
solana-sdk = "*"
solana-validator = "*"

[lib]
crate-type = ["cdylib", "lib"]
