[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.10.31"
thiserror = "1.0.35"
borsh = "0.9.3"
borsh-derive = "0.9.3"

[features]
test-bpf = []


[dev-dependencies]
assert_matches = "*"
solana-logger = "1.10.31"
solana-program-test = "1.10.31"
solana-sdk = "1.10.31"
solana-validator = "1.10.31"
solana-client="1.10.31"

[lib]
crate-type = ["cdylib", "lib"]
