[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.13.7"
thiserror = "1.0.35"
borsh = "0.9.3"
borsh-derive = "0.9.1"

[features]
test-bpf = []


[dev-dependencies]
assert_matches = "1.5.0"
solana-logger = "1.13.7"
solana-program-test = "1.13.7"
solana-sdk = "1.13.7"
solana-validator = "1.13.7"
solana-client="1.13.7"
base64="0.21.0"
[lib]
crate-type = ["cdylib", "lib"]
